Fixed Spacing between header bar icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,11 +186,11 @@ header .logo img { width: 200px; height: 35px; max-width: 200px; max-height: 35p
 
 @media (min-width: 992px) { header .logo img { width: 402px; height: 70px; max-width: 402px; max-height: 70px; } }
 
-header .header-icons { display: flex; align-items: center; gap: 15px; }
+header .header-icons { display: flex; align-items: center; gap: 20px; }
 
 header .header-icons .icon-phone_in_talk { font-size: 3rem; color: #323544; text-decoration: none; }
 
-header .header-icons .search-bar-desktop { display: none; margin-left: 10px; margin-right: 10px; height: 55px; align-items: center; border-radius: 2px; }
+header .header-icons .search-bar-desktop { display: none; height: 55px; align-items: center; border-radius: 2px; }
 
 @media (min-width: 768px) { header .header-icons .search-bar-desktop { display: flex; align-items: center; justify-content: center; } }
 
